--- a/Notebooks/Employee-Satisfaction-in-Python-MC.ipynb
+++ b/Notebooks/Employee-Satisfaction-in-Python-MC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "321d1178",
+   "id": "e502de7a",
    "metadata": {},
    "source": [
     "# What is the employee satisfaction rate? & what variables contribute to said satisfaction?"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3febf732",
+   "id": "697abc4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "81822c7d",
+   "id": "299f08ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "26604811",
+   "id": "90662c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "2299c0a7",
+   "id": "b8bada6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3b3162fc",
+   "id": "5888c578",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ead2724d",
+   "id": "c00fdfe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b7a35451",
+   "id": "008980a2",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "64552a58",
+   "id": "7cd0a0d3",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c26e287d",
+   "id": "7633315f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "318bdd0b",
+   "id": "9b364339",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "bcd1e8d6",
+   "id": "61127289",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f92688b4",
+   "id": "c0a29093",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2ba6f06b",
+   "id": "de25b050",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "38f3f910",
+   "id": "e3c99217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1f533101",
+   "id": "5032533e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "405b6164",
+   "id": "8dc3eade",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "19eb06a5",
+   "id": "979edaaf",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "fb7dd1e8",
+   "id": "dc87b515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "58dd4119",
+   "id": "77f29490",
    "metadata": {},
    "outputs": [
     {
@@ -1449,8 +1449,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "id": "ef60f8da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 500 entries, 0 to 499\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column      Non-Null Count  Dtype\n",
+      "---  ------      --------------  -----\n",
+      " 0   Unnamed: 0  500 non-null    int64\n",
+      " 1   age         500 non-null    int64\n",
+      " 2   job_level   500 non-null    int64\n",
+      " 3   rating      500 non-null    int64\n",
+      " 4   onsite      500 non-null    int64\n",
+      " 5   salary      500 non-null    int64\n",
+      " 6   satisfied   500 non-null    int64\n",
+      " 7   DeptR       500 non-null    int64\n",
+      " 8   locationR   500 non-null    int64\n",
+      "dtypes: int64(9)\n",
+      "memory usage: 35.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "EmployeeSatisfaction.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "da45e9cd",
+   "id": "a498e221",
    "metadata": {},
    "outputs": [],
    "source": []
