--- a/Notebooks/Employee-Satisfaction-in-Python-MC.ipynb
+++ b/Notebooks/Employee-Satisfaction-in-Python-MC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "54b8bdf4",
+   "id": "cdb799f6",
    "metadata": {},
    "source": [
     "# What is the employee satisfaction rate? & what variables contribute to said satisfaction?"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41beea28",
+   "id": "0aa2aaea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a092c6a0",
+   "id": "10da7e5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "69f3f840",
+   "id": "d386daa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "982c10bf",
+   "id": "2dbf5785",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "dc0e5152",
+   "id": "bbc922b3",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "01da89e0",
+   "id": "4ec88e0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,18 +601,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "335fa57f",
+   "execution_count": 82,
+   "id": "ca90fd35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ES.to_csv(\"../Data/ES.csv\")"
+    "ES.to_csv(\"../Data/ES.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "a49dc08c",
+   "execution_count": 83,
+   "id": "e32d80e3",
    "metadata": {},
    "outputs": [
     {
@@ -637,69 +637,69 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>age</th>\n",
-       "      <th>Dept</th>\n",
-       "      <th>location</th>\n",
        "      <th>job_level</th>\n",
        "      <th>rating</th>\n",
        "      <th>onsite</th>\n",
        "      <th>salary</th>\n",
        "      <th>satisfied</th>\n",
+       "      <th>DeptR</th>\n",
+       "      <th>locationR</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>28</td>\n",
-       "      <td>HR</td>\n",
-       "      <td>Suburb</td>\n",
        "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>86750</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>50</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>Suburb</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>42419</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>43</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>Suburb</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>65715</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>44</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>City</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>29805</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>33</td>\n",
-       "      <td>HR</td>\n",
-       "      <td>City</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>29805</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -716,57 +716,57 @@
        "    <tr>\n",
        "      <th>495</th>\n",
        "      <td>49</td>\n",
-       "      <td>HR</td>\n",
-       "      <td>Suburb</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>29805</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>496</th>\n",
        "      <td>24</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>Suburb</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>29805</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>497</th>\n",
        "      <td>34</td>\n",
-       "      <td>Marketing</td>\n",
-       "      <td>City</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>24076</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>498</th>\n",
        "      <td>26</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>City</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>29805</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>499</th>\n",
        "      <td>26</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>City</td>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>42419</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -774,23 +774,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     age        Dept location  job_level  rating  onsite  salary  satisfied\n",
-       "0     28          HR   Suburb          5       2       0   86750          1\n",
-       "1     50  Technology   Suburb          3       5       1   42419          0\n",
-       "2     43  Technology   Suburb          4       1       0   65715          0\n",
-       "3     44       Sales     City          2       3       1   29805          1\n",
-       "4     33          HR     City          2       1       0   29805          1\n",
-       "..   ...         ...      ...        ...     ...     ...     ...        ...\n",
-       "495   49          HR   Suburb          2       5       0   29805          1\n",
-       "496   24  Technology   Suburb          2       4       0   29805          0\n",
-       "497   34   Marketing     City          1       3       0   24076          1\n",
-       "498   26  Technology     City          2       1       1   29805          0\n",
-       "499   26  Technology     City          3       4       0   42419          0\n",
+       "     age  job_level  rating  onsite  salary  satisfied  DeptR  locationR\n",
+       "0     28          5       2       0   86750          1      0          0\n",
+       "1     50          3       5       1   42419          0      1          0\n",
+       "2     43          4       1       0   65715          0      1          0\n",
+       "3     44          2       3       1   29805          1      2          1\n",
+       "4     33          2       1       0   29805          1      0          1\n",
+       "..   ...        ...     ...     ...     ...        ...    ...        ...\n",
+       "495   49          2       5       0   29805          1      0          0\n",
+       "496   24          2       4       0   29805          0      1          0\n",
+       "497   34          1       3       0   24076          1      4          1\n",
+       "498   26          2       1       1   29805          0      1          1\n",
+       "499   26          3       4       0   42419          0      1          1\n",
        "\n",
        "[500 rows x 8 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f138e33e",
+   "id": "894004d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a2987cf2",
+   "id": "3c81a135",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "89d62a11",
+   "id": "86ed6b25",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "50e7a14f",
+   "id": "08066585",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "58538fca",
+   "id": "c86f1344",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a3e25bfe",
+   "id": "7218c053",
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "2885b1a3",
+   "id": "b71aba63",
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "e2722f50",
+   "id": "27807c46",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "fea8d946",
+   "id": "80a879eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "46aa02b1",
+   "id": "776b1a00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "0bb1973d",
+   "id": "fb05c33b",
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "425a486f",
+   "id": "83bdac3a",
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "d2936459",
+   "id": "70e21db0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "f2862b66",
+   "id": "908f4b8b",
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "7d623dc2",
+   "id": "874d31e0",
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75bba791",
+   "id": "6dc1057e",
    "metadata": {},
    "outputs": [],
    "source": []
