--- a/Notebooks/Employee-Satisfaction-TLR.ipynb
+++ b/Notebooks/Employee-Satisfaction-TLR.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ea778bbe",
+   "id": "f1edb630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b16bbebf",
+   "id": "1aab2e86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5dfdddf2",
+   "id": "07c30ba1",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "06c163e3",
+   "id": "7321d820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9ee3218a",
+   "id": "3a9943eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2286e762",
+   "id": "d68c639a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6d2f8fc3",
+   "id": "f5238f1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "59f31663",
+   "id": "30380493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6aab9734",
+   "id": "44382556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b7296f4f",
+   "id": "8c9c737b",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a27a2855",
+   "id": "e9b3cf63",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "120e46c6",
+   "id": "617c32d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ffe7e4d9",
+   "id": "f60d6dbb",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cc71faad",
+   "id": "0323c949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "19f9df27",
+   "id": "e30cd3e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "75ee7d23",
+   "id": "fcc269a2",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4a16f3a5",
+   "id": "84e5dbc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "bf8db774",
+   "id": "5352cdfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2a22a4f0",
+   "id": "a3fae12a",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "8d0a8575",
+   "id": "5f6953b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,11 +1044,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f1967155",
+   "execution_count": 53,
+   "id": "f7ddcdaa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "esi[\"Overall\"] = esi['job_level'].astype(str) +\"-\"+ esi[\"Dept\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "44d4b44e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            5-HR\n",
+       "1    3-Technology\n",
+       "2    4-Technology\n",
+       "3         2-Sales\n",
+       "4            2-HR\n",
+       "Name: Overall, dtype: object"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "esi[\"Overall\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e41f7d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#seems like HR dept has the highest job levels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "beed613d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "esi[\"New\"] = esi['salary'].astype(str) +\"-\"+ esi[\"Dept\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "09de0efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            86750-HR\n",
+       "1    42419-Technology\n",
+       "2    65715-Technology\n",
+       "3         29805-Sales\n",
+       "4            29805-HR\n",
+       "Name: New, dtype: object"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "esi[\"New\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "627f3fa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#which also results to them (HR) having the highest salaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "d57f11e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "esi[\"Look\"] = esi['satisfied'].astype(str) +\"-\"+ esi[\"Dept\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "28530d14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            1-HR\n",
+       "1    0-Technology\n",
+       "2    0-Technology\n",
+       "3         1-Sales\n",
+       "4            1-HR\n",
+       "Name: Look, dtype: object"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "esi[\"Look\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46da2abe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this also shows that the employers are also satisfied with being in the HR dept as 1= True and 0=False"
+   ]
   }
  ],
  "metadata": {
