--- a/Notebooks/Employee-Satisfaction-TLR.ipynb
+++ b/Notebooks/Employee-Satisfaction-TLR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "f1edb630",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "1aab2e86",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "07c30ba1",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "[500 rows x 14 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "7321d820",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "3a9943eb",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "d68c639a",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "f5238f1b",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "30380493",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "44382556",
    "metadata": {},
    "outputs": [],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "8c9c737b",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "[500 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "e9b3cf63",
    "metadata": {},
    "outputs": [
@@ -855,7 +855,7 @@
        "[7 rows x 500 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "617c32d5",
    "metadata": {},
    "outputs": [],
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "f60d6dbb",
    "metadata": {},
    "outputs": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "0323c949",
    "metadata": {},
    "outputs": [],
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "id": "e30cd3e1",
    "metadata": {},
    "outputs": [],
@@ -944,17 +944,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "id": "fcc269a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x212f5671f60>"
+       "<seaborn.axisgrid.PairGrid at 0x26319efc6d0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "84e5dbc0",
    "metadata": {},
    "outputs": [],
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "id": "5352cdfe",
    "metadata": {},
    "outputs": [],
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "id": "a3fae12a",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1008,7 @@
        "Text(0, 0.5, 'job_level')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "5f6953b5",
    "metadata": {},
    "outputs": [],
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "id": "f7ddcdaa",
    "metadata": {},
    "outputs": [],
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "id": "44d4b44e",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1069,7 @@
        "Name: Overall, dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "7e41f7d5",
    "metadata": {},
    "outputs": [],
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 52,
    "id": "beed613d",
    "metadata": {},
    "outputs": [],
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 53,
    "id": "09de0efa",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1115,7 @@
        "Name: New, dtype: object"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "id": "627f3fa5",
    "metadata": {},
    "outputs": [],
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 55,
    "id": "d57f11e2",
    "metadata": {},
    "outputs": [],
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 56,
    "id": "28530d14",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
        "Name: Look, dtype: object"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "id": "46da2abe",
    "metadata": {},
    "outputs": [],
@@ -1182,8 +1182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "32713925",
+   "execution_count": 58,
+   "id": "d3a049b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,8 +1192,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bde7b7f5",
+   "execution_count": 59,
+   "id": "534c5e90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,8 +1202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a1267989",
+   "execution_count": 60,
+   "id": "bbc63dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,8 +1212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e02130b1",
+   "execution_count": 61,
+   "id": "3e96c96f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,8 +1222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f71fa391",
+   "execution_count": 62,
+   "id": "119c0cd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,8 +1232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0d525da8",
+   "execution_count": 63,
+   "id": "f533040d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,8 +1242,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "fb18a683",
+   "execution_count": 64,
+   "id": "a786cc80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,28 +1252,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "9e88fd3d",
+   "execution_count": 65,
+   "id": "08a92823",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'esi1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [23]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sns\u001b[38;5;241m.\u001b[39mdisplot(\u001b[43mesi1\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msalary\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'esi1' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>Dept</th>\n",
+       "      <th>education</th>\n",
+       "      <th>recruitment_type</th>\n",
+       "      <th>job_level</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>satisfied</th>\n",
+       "      <th>Overall</th>\n",
+       "      <th>New</th>\n",
+       "      <th>Look</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>Referral</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>86750</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5-HR</td>\n",
+       "      <td>86750-HR</td>\n",
+       "      <td>1-HR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>Walk-in</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>42419</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3-Technology</td>\n",
+       "      <td>42419-Technology</td>\n",
+       "      <td>0-Technology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>43</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>UG</td>\n",
+       "      <td>Referral</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>65715</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4-Technology</td>\n",
+       "      <td>65715-Technology</td>\n",
+       "      <td>0-Technology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>44</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>On-Campus</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>29805</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2-Sales</td>\n",
+       "      <td>29805-Sales</td>\n",
+       "      <td>1-Sales</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>33</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>UG</td>\n",
+       "      <td>Recruitment Agency</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29805</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2-HR</td>\n",
+       "      <td>29805-HR</td>\n",
+       "      <td>1-HR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age        Dept education    recruitment_type  job_level  rating  salary  \\\n",
+       "0   28          HR        PG            Referral          5       2   86750   \n",
+       "1   50  Technology        PG             Walk-in          3       5   42419   \n",
+       "2   43  Technology        UG            Referral          4       1   65715   \n",
+       "3   44       Sales        PG           On-Campus          2       3   29805   \n",
+       "4   33          HR        UG  Recruitment Agency          2       1   29805   \n",
+       "\n",
+       "   satisfied       Overall               New          Look  \n",
+       "0          1          5-HR          86750-HR          1-HR  \n",
+       "1          0  3-Technology  42419-Technology  0-Technology  \n",
+       "2          0  4-Technology  65715-Technology  0-Technology  \n",
+       "3          1       2-Sales       29805-Sales       1-Sales  \n",
+       "4          1          2-HR          29805-HR          1-HR  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "esi.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d07252fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jb_crosstab = pd.crosstab(esi['job_level'], esi['salary'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "fa73c33b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>salary</th>\n",
+       "      <th>24076</th>\n",
+       "      <th>29805</th>\n",
+       "      <th>42419</th>\n",
+       "      <th>65715</th>\n",
+       "      <th>86750</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>job_level</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>95</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "salary     24076  29805  42419  65715  86750\n",
+       "job_level                                   \n",
+       "1             95      0      0      0      0\n",
+       "2              0    110      0      0      0\n",
+       "3              0      0     82      0      0\n",
+       "4              0      0      0    110      0\n",
+       "5              0      0      0      0    103"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jb_crosstab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "d3f47f78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chi2ContingencyResult(statistic=1999.9999999999995, pvalue=0.0, dof=16, expected_freq=array([[18.05 , 20.9  , 15.58 , 20.9  , 19.57 ],\n",
+       "       [20.9  , 24.2  , 18.04 , 24.2  , 22.66 ],\n",
+       "       [15.58 , 18.04 , 13.448, 18.04 , 16.892],\n",
+       "       [20.9  , 24.2  , 18.04 , 24.2  , 22.66 ],\n",
+       "       [19.57 , 22.66 , 16.892, 22.66 , 21.218]]))"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.chi2_contingency(jb_crosstab)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98c5b5d8",
+   "id": "0dc46dac",
    "metadata": {},
    "outputs": [],
    "source": []
