--- a/Notebooks/Employee-Satisfaction-TLR.ipynb
+++ b/Notebooks/Employee-Satisfaction-TLR.ipynb
@@ -1183,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d3a049b6",
+   "id": "a8383b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "534c5e90",
+   "id": "39366ed4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "bbc63dfe",
+   "id": "cea765aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "3e96c96f",
+   "id": "696aba5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "119c0cd8",
+   "id": "e1c6b167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "f533040d",
+   "id": "53ec14fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a786cc80",
+   "id": "6d7587c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "08a92823",
+   "id": "302e878e",
    "metadata": {},
    "outputs": [
     {
@@ -1392,8 +1392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "d07252fc",
+   "execution_count": 70,
+   "id": "2be8f71e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#now testing chisquare for 'job_level' and 'salary'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "4a29d075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1402,8 +1412,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "fa73c33b",
+   "execution_count": 72,
+   "id": "e5f20366",
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1507,7 @@
        "5              0      0      0      0    103"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,8 +1518,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "d3f47f78",
+   "execution_count": 73,
+   "id": "70577061",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1532,7 @@
        "       [19.57 , 22.66 , 16.892, 22.66 , 21.218]]))"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,8 +1543,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "id": "5ff9237d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pvalue is 0.0 which is less than 0.5 meaning there is NOT a statistical significant; reject the null hypothesis"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0dc46dac",
+   "id": "b5ef6017",
    "metadata": {},
    "outputs": [],
    "source": []
