--- a/Notebooks/Employee-Satisfaction-TLR.ipynb
+++ b/Notebooks/Employee-Satisfaction-TLR.ipynb
@@ -1183,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a8383b96",
+   "id": "1f18f7a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "39366ed4",
+   "id": "47c883c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cea765aa",
+   "id": "07d917f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "696aba5c",
+   "id": "913c6de9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e1c6b167",
+   "id": "f96cf4b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "53ec14fd",
+   "id": "1968b329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "6d7587c5",
+   "id": "45ce08f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "302e878e",
+   "id": "be06d48b",
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2be8f71e",
+   "id": "0c26b16a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "4a29d075",
+   "id": "0af96af9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "e5f20366",
+   "id": "137032a1",
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "70577061",
+   "id": "4d6faca0",
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "5ff9237d",
+   "id": "abeee195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,8 +1553,169 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "id": "0d671bca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#testing chisquare for 'dept' and 'salaries' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "8ab1ef10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dept_crosstab = pd.crosstab(esi['Dept'], esi['salary'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "904df371",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>salary</th>\n",
+       "      <th>24076</th>\n",
+       "      <th>29805</th>\n",
+       "      <th>42419</th>\n",
+       "      <th>65715</th>\n",
+       "      <th>86750</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dept</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>HR</th>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>22</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Marketing</th>\n",
+       "      <td>24</td>\n",
+       "      <td>18</td>\n",
+       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Purchasing</th>\n",
+       "      <td>13</td>\n",
+       "      <td>23</td>\n",
+       "      <td>17</td>\n",
+       "      <td>30</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sales</th>\n",
+       "      <td>14</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>24</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Technology</th>\n",
+       "      <td>22</td>\n",
+       "      <td>32</td>\n",
+       "      <td>16</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "salary      24076  29805  42419  65715  86750\n",
+       "Dept                                         \n",
+       "HR             22     20     22     21     21\n",
+       "Marketing      24     18     11     22     20\n",
+       "Purchasing     13     23     17     30     26\n",
+       "Sales          14     17     16     24     21\n",
+       "Technology     22     32     16     13     15"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dept_crosstab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "cc76a281",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chi2ContingencyResult(statistic=23.52243088615982, pvalue=0.10046642202598727, dof=16, expected_freq=array([[20.14 , 23.32 , 17.384, 23.32 , 21.836],\n",
+       "       [18.05 , 20.9  , 15.58 , 20.9  , 19.57 ],\n",
+       "       [20.71 , 23.98 , 17.876, 23.98 , 22.454],\n",
+       "       [17.48 , 20.24 , 15.088, 20.24 , 18.952],\n",
+       "       [18.62 , 21.56 , 16.072, 21.56 , 20.188]]))"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.chi2_contingency(dept_crosstab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "ad433f5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pvalue is 0.10 which is weak evidence or a trend"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b5ef6017",
+   "id": "fdf705a4",
    "metadata": {},
    "outputs": [],
    "source": []
