--- a/Notebooks/Employee-Satisfaction-in-Python-MC.ipynb
+++ b/Notebooks/Employee-Satisfaction-in-Python-MC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "73bdfa9e",
+   "id": "ce090263",
    "metadata": {},
    "source": [
     "# What is the employee satisfaction rate? & what variables contribute to said satisfaction?"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09103836",
+   "id": "058fbfa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9b049b0f",
+   "id": "b5c6a739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e616ee58",
+   "id": "3f18e488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "3b052961",
+   "id": "b5d7303a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "1f70b530",
+   "id": "3044b875",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "93a878bd",
+   "id": "8daa24f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "605991e4",
+   "id": "a89cafc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "ec246437",
+   "id": "47294fe3",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "43ba84cc",
+   "id": "97dda7df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "b392ef9e",
+   "id": "317b000c",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "8a905b25",
+   "id": "d901d8af",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "58996741",
+   "id": "22a7392e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "c8b88c79",
+   "id": "e1ef73f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "615ea975",
+   "id": "0ebb166c",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "bcf195b9",
+   "id": "0da79249",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "1d9b1dd1",
+   "id": "b0d79277",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "bea44e54",
+   "id": "764a5e89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "23747e39",
+   "id": "fa85070a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "e9e22a97",
+   "id": "cb970afa",
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1202,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "4710444d",
+   "id": "adaf33d8",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "b22894aa",
+   "id": "ef4a1c5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "6aa1f7f4",
+   "id": "bfef5e90",
    "metadata": {},
    "outputs": [
     {
@@ -1628,8 +1628,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 129,
+   "id": "d0090701",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ES.to_csv(\"../Data/ESmc.csv\",index=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 112,
-   "id": "78d17251",
+   "id": "23d02e40",
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "8b9b465f",
+   "id": "bc75d3ee",
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "b059b19c",
+   "id": "8ce8be75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,7 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "2fbe683e",
+   "id": "4879defd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1714,7 +1724,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "c13f4aac",
+   "id": "0d1f1abe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1724,7 +1734,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "0f49e539",
+   "id": "2d4454cc",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "7e75dfb9",
+   "id": "dcff4e42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "2561b336",
+   "id": "3745a9c2",
    "metadata": {},
    "outputs": [
     {
@@ -1824,7 +1834,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "fb600d8c",
+   "id": "809a3caf",
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "b2c37119",
+   "id": "41d9551f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1884,7 +1894,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "54725ab5",
+   "id": "9cb72e11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1895,7 +1905,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "d91dd623",
+   "id": "fc4b8bbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1905,7 +1915,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "ca2fb526",
+   "id": "3403e64d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "ecfa3df5",
+   "id": "722bcc68",
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "efa4d333",
+   "id": "0252a974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1951,7 +1961,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "4c9f6c0b",
+   "id": "34a3f515",
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "d6b37a7e",
+   "id": "0aed1b78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,7 +1992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e28aa8f",
+   "id": "2cc7b1b3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2004,7 +2014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
